[package]
name = "dfu_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
async-recursion = "1.0.5"
clap = { version = "4.5.1", features = ["derive"] }
reqwest = "0.11.24"
serde = { version = "1.0.196", features = ["serde_derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["tokio-macros", "full"] }
